<resources>
    <string name="app_name">SmartHome</string>
    <string name="TextTemperature">Температура (Room1)</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="Auth">Authorization</string>
    <string name="password">Password:</string>
    <string name="search_title">Search</string>
    <string name="logout">Logout</string>
    <string name="notify_user">Notifications</string>
    <string name="settings">Settings</string>
    <string name="home_page">Home</string>

    //Настройки SharedPreferences
    <string name="login_preference">Login Preference</string>
    <string name="login_status_preferences">Login Status Preference</string>
    <string name="notify_temperature">Get data about changes in temperature</string>
    <string name="sign_in">sign in</string>
    <string name="sign_up">sign up</string>
    <string name="title_activity_csign_up">Sign in</string>
    <string name="permission_refused">permission refused</string>
    <string name="Unknown_permission_request">Unkhown permission request</string>
    <string name="authenticate_fingerprint">Authenticate fingerprint</string>
    <string name="auth_successful">Auth successful</string>
    <string name="login_with_fingerprint">Login with fingerprint</string>
    <string name="with_fingerprint_and_password">With fingerprint and password</string>
    <string name="with_fingerprint">With fingerprint</string>
    <string name="login_now">Login now</string>

    <string name="phone_number_hint">Phone number</string>
    <string name="address_hint">Address</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="username_hint">Username</string>
    <string name="temperature">Temperature</string>
    <string name="NewDelayTempeture">Time Delay</string>
    <string name="SaveUserSettings">Save</string>
    <string name="update">Update</string>


</resources>
