<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingBottom="@dimen/_4sdp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimaryDark"
    tools:context="com.smarthome.Activities.CActivitySignUp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/login_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:padding="@dimen/_4sdp"
                android:text=""
                android:textColor="@color/colorPrimaryDark" />

            <androidx.cardview.widget.CardView

                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                card_view:cardElevation="@dimen/_3sdp"
                card_view:cardUseCompatPadding="true">


                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username_hint"
                    android:textColorHint="@color/colorLight"
                    android:inputType="text"
                    android:maxLines="1"
                    android:background="@android:color/transparent"
                    android:textColor="@color/colorBlack"
                    android:padding="@dimen/_12sdp"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                card_view:cardElevation="@dimen/_3sdp"
                card_view:cardUseCompatPadding="true">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_hint"
                    android:textColorHint="@color/colorLight"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:background="@android:color/transparent"
                    android:textColor="@color/colorBlack"
                    android:padding="@dimen/_12sdp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                card_view:cardElevation="@dimen/_3sdp"
                card_view:cardUseCompatPadding="true">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_hint"
                    android:textColorHint="@color/colorLight"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:background="@android:color/transparent"
                    android:textColor="@color/colorBlack"
                    android:padding="@dimen/_12sdp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                card_view:cardElevation="@dimen/_3sdp"
                card_view:cardUseCompatPadding="true">

                <EditText
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address_hint"
                    android:textColorHint="@color/colorLight"
                    android:inputType="textPostalAddress"
                    android:maxLines="1"
                    android:background="@android:color/transparent"
                    android:textColor="@color/colorBlack"
                    android:padding="@dimen/_12sdp"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                card_view:cardElevation="@dimen/_3sdp"
                card_view:cardUseCompatPadding="true">

                <EditText
                    android:id="@+id/phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number_hint"
                    android:inputType="phone"
                    android:textColorHint="@color/colorLight"
                    android:maxLines="1"
                    android:background="@android:color/transparent"
                    android:textColor="@color/colorBlack"
                    android:padding="@dimen/_12sdp"/>

            </androidx.cardview.widget.CardView>

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/_16sdp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/with_fingerprint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_10sdp"
                    android:text="@string/with_fingerprint"/>

                <RadioButton
                    android:id="@+id/with_fingerprint_and_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_10sdp"
                    android:text="@string/with_fingerprint_and_password"/>

            </RadioGroup>

            <Button
                android:id="@+id/sign_up_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24sdp"
                android:paddingBottom="@dimen/_16sdp"
                android:paddingTop="@dimen/_16sdp"
                android:text="@string/sign_up"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                android:background="@color/colorPrimaryDark"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>